added siinamota fansite button to homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -129,6 +129,7 @@ finished on 02.mar.25 -->
 			<aside id="sticker2" class="deco"><img src="/collection/internet-graphics/!g/borntodie.png" alt=""></aside>
 			<aside id="sticker6" class="deco"><a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank"><img title="from catstuff!" src="!f/v5/assets/meowunderstand.gif" alt="banner that reads 'which part of meow don't you understand?'"></a></aside>
 			<aside id="sticker8" class="deco"><a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank"><img title="from catstuff!" src="!f/v5/assets/benice.gif" alt="banner that reads 'please be nice to me, i love you'"></a></aside>
+			<aside id="sticker9" class="deco"><a title="my siinamota fansite :3" href="https://siinamota.doqmeat.com" target="_blank"><img src="https://siinamota.doqmeat.com/info/!g/buttons/button1%20(4).png" alt="siinamota fansite button"></a></aside>
 			<!-- notepad wrapper -->
 			<section id="notepad">
 				<section id="stats" class="notepad-boxes">
