added my letterboxd rss

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 		<h1>tv log</h1>
-		<p>keeping track of the stuff i've watched that i've enjoyed + some thoughts on them. might input films here as well...</p>
+		<p>place for me to ramble on about stuff i've watched, films and shows alike.</p>
 	</header>
 	<main>
 		<div id="wrapper">
@@ -129,10 +129,16 @@
 			<!--wrapper end div-->
 		</div>
 
-		<div id="lists">
-			<p>might eventually put these up if i have anything to say abt them... i just like doing lists</p>
-			<details>
-				<summary>finished</summary>
+		<aside>
+			<div id="letterboxd-rss">
+				<h2>lastest watched on <a href="https://letterboxd.com/doqmeat/" target="_blank" class="outlink">letterboxd</a></h2>
+				<script src="//rss.bloople.net/?url=https%3A%2F%2Fletterboxd.com%2Fdoqmeat%2Frss%2F&limit=4&showtitle=false&type=js"></script>
+			</div>
+
+			<div id="lists">
+				<h2>shows / anime list</h2>
+				<p>might eventually put these up if i have anything to say abt them... i just like doing lists</p>
+				<h3>finished</h3>
 				<ul>
 					<li>severance</li>
 					<li>twin peaks: the return</li>
@@ -165,23 +171,22 @@
 					<li>grace & frankie</li>
 					<li>the queen's gambit</li>
 				</ul>
-			</details>
-
-			<details>
-				<summary>want to watch</summary>
+				<h3>watchlist</h3>
 				<ul>
+					<li>lady oscar</li>
+					<li>princess tutu</li>
 					<li>shows that <a title="my masaaki yuasa watchlist" href="/masaaki-yuasa/index.html">masaaki yuasa</a> has been involved with!</li>
 					<li>sonny boy</li>
 					<li>the rose of versailles</li>
 					<li>the haunting of bly manor</li>
 					<li>serial experiments lain</li>
 				</ul>
-			</details>
-		</div>
+			</div>
+		</aside>
 	</main>
 
 	<footer>
-		<p><b>last updated: 20.apr.25</b></p>
+		<p><b>last updated: 19.jun.25</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
