button wall quick changes

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -183,7 +183,6 @@
 			<a title="features interesting articles and web dev resources!!! i feel like i could be here for hours and hours" href="https://neonaut.neocities.org" target="_blank"><img src="!g/neonaut.png"></a>
 			<a href="https://sillytime.neocities.org" target="_blank"><img src="!g/sillytime.png" alt="sillytime"></a>
 			<a href="https://glassyhouse.neocities.org" target="_blank"><img src="!g/glassyhouse.png"></a>
-			<a href="https://vashti.neocities.org" target="_blank"><img src="!g/vashti.png"></a>
 			<a href="https://www.snifflebear.moe/p/welcome.html" target="_blank"><img src="!g/snifflebear.png" alt="snifflebear.moe"></a>
 			<a title="such a cute site with lots of personality" href="https://eggsandmint.neocities.org" target="_blank"><img src="!g/eggsandmint.png" alt="eggsandmint"></a>
 			<a title="velvet blue - a very sensire site" href="https://velvetblue.neocities.org/"><img src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
@@ -329,13 +328,13 @@
 		<a title="lots of cute old graphics" href="https://web.archive.org/web/20081228002347/http://ritvasgallery.com/files0/fallflowers.htm" target="_blank"><img src="!g/ritvasgallery.gif" alt="ritva's gallery"></a>
 
 		<h4 id="fansite">fansites / wikis</h4>
+		<a title="siinamota fansite owned by me!" href="https://siinamota.doqmeat.com" target="_blank"><img src="https://siinamota.doqmeat.com/info/!g/buttons/button1%20(1).png" alt="siinamota fansite"></a>
 		<a title="fansite for kpop group billlie" href="https://billlielove.neocities.org/" target="_blank"><img src="!g/billlielove.webp" alt="billlielove"></a>
 		<a href="https://read-nekojiru.neocities.org/"><img src="!g/read-nekojiru.gif" alt="read-nekojiru"></a>
 		<a href="frutigeraeroarchive.neocities.org" target="_blank"><img src="!g/frutigeraeroarchive.png" alt="frutigeraeroarchive"></a>
 
 		<h4 id="fun">for fun / misc</h4>
 		<div class="neo">
-			<a href="https://adilene.net" target="_blank"><img src="!g/adilene.net.png"></a>
 			<a href="https://momg.neocities.org" target="_blank"><img src="!g/momg.gif"></a>
 			<a title="hallowdaze" href="https://hallowdaze.neocities.org/" target="_blank"><img src="!g/hallowdaze.gif"></a>
 			<a title="space bar" href="https://space-bar.neocities.org" target="_blank"><img src="!g/space-bar.jpg"></a>
@@ -383,7 +382,6 @@
 			<a title="rue - very interesting and well written music reviews!" href="https://angelpuppyclub.neocities.org" target="_blank"><img src="!g/angelpuppyclub.gif"></a>
 			<a title="kojou - i love all the art around this site!" href="https://kojou.neocities.org" target="_blank"><img src="!g/kojou.jpg"></a>
 			<a title="finn - i love their /cats page the most!" href="https://snowenti.neocities.org" target="_blank"><img src="!g/snowenti.gif"></a>
-			<a title="r0b1n666 - cool art!" href="https://r0b1n666.neocities.org" target="_blank"><img src="!g/r0b1n666.gif"></a>
 			<a href="https://panaceas.neocities.org" target="_blank"><img src="!g/panaceas.png"></a>
 			<a title="vulpix" href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
 			<a title="maalused - has a very cool and mysterious vibe to it!" href="https://maalused.neocities.org" target="_blank"><img src="!g/maalused.gif"></a>
@@ -391,11 +389,11 @@
 			<a title="lovely photos on their blog" href="https://bootlegfriend.neocities.org" target="_blank"><img src="!g/bootleg.png" alt="bootleg"></a>
 			<a href="https://angelscake.neocities.org/" target="_blank"><img src="!g/angelscake.gif" alt="angelscake"></a>
 			<a href="https://sealparty.neocities.org" target="_blank"><img src="!g/sealparty.gif"></a>
+			<a href="https://adilene.net" target="_blank"><img src="!g/adilene.net.png"></a>
 		</div>
 
 		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
 			<a href="https://glassheart.neocities.org" target="_blank">glassheart</a> /
-			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank">blackwater</a> /
 			<a href="https://karameruu.neocities.org/" target="_blank">karameruu</a> /
 			<a title="lexi" href="https://lexiqqq.com/" target="_blank">lexiqqq</a> /
 			<a href="https://innkeeper.neocities.org" target="_blank">innkeeper</a>
