--- a/doqmeat/vgs/games/bloodborne/index.html
+++ b/doqmeat/vgs/games/bloodborne/index.html
@@ -13,6 +13,38 @@
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
+
+	<style>
+		body {
+			background-image: url(bg.png);
+			background-size: cover;
+			background-attachment: fixed;
+			background-repeat: no-repeat;
+			background-position: top;
+		}
+
+		main,
+		footer {
+			background: #4b3269d0;
+			color: white;
+
+			a {
+				color: #e68a5f;
+				text-shadow: 1px 1px 1px black;
+			}
+
+			i {
+				background: transparent;
+				color: color;
+				text-shadow: 1px 1px 1px #dd7c4f;
+			}
+
+			mark {
+				background: #e68a5f;
+				color: black;
+			}
+		}
+	</style>
 </head>
 
 <body>
@@ -30,8 +62,24 @@
 			<a title="archive.org pdf" href="https://archive.org/details/artbook-Bloodborne_Official_Artworks/mode/2up" target="_blank">artbook</a>
 		</div>
 		<br>
-		<!-- // have character stats here! -->
+		<!-- // have character stats / build here! -->
 		<h3>logs</h3>
+		<!-- talk abt beating logarious, spider with help of a friend, feature plans -->
+		<p><span class="date">20.jun.25</span> been a while since i've updated this but i'm still making progress! ok so FIRST of all <mark>my latest achievement in this game has been being able to beat <i>martyr logarious</i></mark> because WOW did that get some time to get used to his moves. but once you got that down, the fight gets very very manageable. i think it took me like. 10 times or something like that to beat him. the trick was to do as many viceral attacks as i could since that's what was doing most of the damage to him. also, i did not mean to aurafarm when i activated the fire paper my bad. below i share a clip of the last moments of the boss fight.</p>
+		<video width="100%" controls>
+			<source src="https://files.catbox.moe/a79guy.mp4" type="video/mp4">
+		</video>
+		<p>my online friend, hina, came to my world to help me out with <i>rom</i> which made the fight insanely easy. i was already told the fight wasn't going to be hard but that the baby spiders are kinda annoying. i never got to experience that because i basically explored the entirety of <b>byrgenwerth</b> with my friend. very small place.</p>
+		<figure>
+			<img src="hina-n-me.jpg" alt="two hunters emoting in bloodborne">
+			<figcaption>me and my friend @ byrgenwerth slaying (literally)</figcaption>
+		</figure>
+		<p>after <i>rom</i>, i stumbled upon yahar'gul once again. i am scared! of what's happening in game but i will persevere. i checked some of my lamps and noticed two of them weren't working: <b>hypogean gaol</b> and <b>grand cathedral</b>. hypogean gaol is probably disabled because i just got to yahar'gul and some shit is most likely going down over there. but grand cathedral..... ermmm.... i don't think i've mentioned this here but i am currently playing in a save file that dates back to 2018 when this game was free through PS+. idk what was wrong with me back then but i aggro'ed <b>eileen the crow</b> and well. i've heard that because of that she will eventually want to kill me. this is that moment. i am pretty sure the lamp has been disabled because of that. <img src="/!g/pix/catsob.gif"> i'm so sad i did that because she seems like such a cool character... but oh well. we move forward. it is safe to say i have a fight with her pending *gulp*.</p>
+		<p>there's also some items and places i would like to explore a bit more in-depth before going deep into yahar'gul... so i will probably do that before advancing further into this insane story. oh i also figured out how to take nice screenshots in-game without my character appearing in them. nice. you just gotta use the monocle + sitting emote + hide the ui. i actually got that little trick from this <a title="Let's Explain Bloodborne As We Play" href="https://youtu.be/U1U784baqIA?si=-vYsN6y5uTr80tAl" target="_blank" class="outlink">youtube video</a> i've been watching as i play the game. <small>i have no clue what is happening in this game 99% of the time.</small></p>
+		<img src="250620 (1).jpg" alt="hunter's dream screenshots" width="100%">
+		<img src="250620 (2).jpg" alt="hunter's dream screenshots" width="100%">
+		<img src="250620 (3).jpg" alt="hunter's dream screenshots" width="100%">
+		<hr>
 		<p><span class="date">30.may.25</span> <b>I BEAT THE 3 BROS</b>. i am finally back where i was when my PS4 stopped working! i might explore the forbidden woods before diving deeper into new territory though cus i'm missing some items from that area. i feel like i'm starting to get a bit more of confidence with this game... slowly but surely.</p>
 		<hr>
 		<p><span class="date">25.may.25</span> leveled up 3 times and also went to the clinic and to the castle. i love playing this game and its story and the setting but i also forget how scary playing it is for me <img src="https://doqmeat.com/!g/pix/emote1crying.gif" alt=""> which makes me get really tense at times and even find the game a bit exhausting to play as well.... wish i was built different but i am not <img src="https://doqmeat.com/!g/pix/emote13dots.gif" alt=""> so i downloaded the <i>official strategy guide</i> into my tablet and that has helped out a bit with my overall anxiousness while playing. i honestly just need to unclench and stop being so scared of dying in a game where dying is literally one of the core mechanics.</p>
@@ -55,11 +103,11 @@
 		<p><span class="date">20.jul.23</span>today i got to cainhurst castle! (happy but also shivering from fear) you know ive noticed that im always VERY tense when playing this game. its crazy bc i do enjoy it but oh my god. i really cant deny that despite getting the hang of this game it is still Really scary for me <img src="/!g/pix/emote1scared.gif"> its like i love it because the atmosphere is so well made but i also hate how it makes me feel so much <img src="/!g/pix/catscared.gif"> gripping my ps4 controller for life</p>
 		<img src="scenerycastle.jpg" width="100%">
 		<p>i liked the view here tho. nice place to take a quick breather. only for me to get scared in the next 10 seconds PLEASEEE</p>
-		<video id="video" width="100%" controls>
+		<video width="100%" controls>
 			<source src="https://files.catbox.moe/eexho3.mp4" type="video/mp4">
 		</video>
 		<p>as you can see i really but really take my time getting through these levels (tho theres some rare cases where i just have to say fuck it and run pass them). while exploring this place theres these ladies with swords (honestly good for them i guess) and they are VERY slow but all of a sudden this happened and i went <i>NOPE, me and my 20k echoes are outtie</i>. yall take it easy. i had just unlocked a shortcut too so it seemed quite fitting to stop the journey there</p>
-		<video id="video" width="100%" controls>
+		<video width="100%" controls>
 			<source src="https://files.catbox.moe/5qvnd0.mp4" type="video/mp4">
 		</video>
 		<p>right after this i spent exactly 8 minutes fighting like 10 5ft long worms. horrible i know. i hope i never encounter them again in another level because wow were they such a pain for just being skinny ass WORMS</p>
@@ -80,7 +128,7 @@
 
 
 
-		<h4>screenshots</h4>
+		<h4>misc screenshots</h4>
 		<img title="this is my hunter :3 i was so happy when i found this fit. THE hunter fit" src="myhunter.jpg" width="100%">
 		<img title="me and the bestie" src="meandbestie.jpg" width="100%">
 		<img title="me and the bestie but MATCHING :3" src="WITHBESTIEAGAIN.jpg" width="100%">
