added a new stamp

--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -149,6 +149,7 @@
 			<img src="!g/monstercat.gif">
 			<a href="https://www.deviantart.com/virus-xenon/art/Rainbow-2-724977359" target="_blank"><img src="!g/virus-xenon-rainbow.gif"></a>
 			<img src="!g/gay.png">
+			<img src="!g/git.png" alt="git.gay">
 		</div>
 
 		<h2 id="2" class="title">blinkies</h2>
@@ -284,7 +285,7 @@
 		<h2 id="5" class="title">other</h2>
 		<div id="other" class="container">
 			<img src="!g/blinkychoco.gif">
-			<img src="!g/plsbnice.png" alt="please be nice to me">
+			<a href="https://user.xmission.com/~emailbox/catstuff.htm" target="_blank"><img src="!g/plsbnice.png" alt="please be nice to me png from catstuff"></a>
 			<img src="!g/borntodie.png">
 			<img src="!g/unseen.png">
 		</div>
@@ -293,7 +294,7 @@
 	</div>
 
 	<footer>
-		<p>last updated on: <b>22.nov.24</b></p>
+		<p>last updated on: <b>22.jun.25</b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
