added a new vocaloid webring widget

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -14,11 +14,14 @@ finished on 02.mar.25 -->
 	<link rel="icon" type="image/x-icon" href="/!g/pix/dumy.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="!f/v5/body.css?0613" rel="stylesheet" type="text/css" media="all">
+	<!-- 4 the vocaloid webring -->
+	<link rel="stylesheet" href="https://electric-tenshi.nekoweb.org/vocaring/vocaring.css">
+	<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-variables.js"></script>
+	<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-widget.js"></script>
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
-	<!--  end of tooltip shit -->
 </head>
 
 <body>
@@ -163,6 +166,9 @@ finished on 02.mar.25 -->
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
+					<!-- vocaloid webring -->
+					<div id="vocaring"></div>
+
 					<!-- music ring -->
 					<div style="margin:auto;">
 						<a href="https://peanits.lol/webrings/musicring/index.php"><img src="https://peanits.lol/webrings/musicring/assets/button.gif"></a>
