minor changes to journal archive

--- a/doqmeat/journal/archive.html
+++ b/doqmeat/journal/archive.html
@@ -58,88 +58,93 @@ coded with love by des
       - gaming : video game talk
     - coding: anything that has to do with coding including my site, other stuff
      -->
-    <h3>tags:</h3>
-    <button onclick="showLog('')">all</button>
-    <button onclick="showLog('life')">life</button>
-    <button onclick="showLog('interests')">interests</button>
-    <button onclick="showLog('pets')">pets</button>
-    <button onclick="showLog('uni')">uni</button>
-    <button onclick="showLog('tech')">tech</button>
-    <button onclick="showLog('coding')">coding</button>
-    <button onclick="showLog('site')">site</button>
-    <button onclick="showLog('music')">music</button>
-    <button onclick="showLog('gaming')">gaming</button>
-    <li class="gaming">18.jun.25 - <a href="2025/06.html#18">PS5 thoughts: 1 month in</a></li>
-    <li class="tech interests">01.jun.25 - <a href="2025/06.html#1">my beautiful madoka discs</a></li>
-    <li class="life uni">26.may.25 - <a href="2025/05.html#26">recap of uni semester + summer plans</a></li>
-    <li class="pets">20.apr.25 - <a href="2025/04.html#20">walking steve minecraft outside</a></li>
-    <li class="life coding">11.apr.25 - <a href="2025/04.html#11">this is like the equivalent of someone not talking for a week and then talking for 5 hours straight.</a></li>
-    <li class="music interests">08.mar.25 - <a href="2025/03.html#8">i need to let go of spotify</a></li>
-    <li class="uni">01.mar.25 - <a href="2025/03.html#1">a lot happening</a></li>
-    <li class="uni">23.jan.25 - <a href="2025/01.html#23">2nd year of uni</a></li>
-    <li class="life interests gaming">20.jan.25 - <a href="2025/01.html#20">winter break wrap-up</a></li>
-    <li class="life interests">01.jan.25 - <a href="2025/01.html#1">i am tired, but also a bit joyful</a></li>
-    <li class="uni">17.dec.24 - <a href="2024/12.html#17">1st year of uni done!</a></li>
-    <li class="pets">23.nov.24 - <a href="2024/11.html#23">my new furry friend: steve</a></li>
-    <li class="interests">31.oct.24 - <a href="2024/10.html#31">happy halloween</a></li>
-    <li class="interests">25.oct.24 - <a href="2024/10.html#25">look back</a></li>
-    <li class="life">27.sep.24 - <a href="2024/09.html#27">untitled post</a></li>
-    <li class="gardening">14.sep.24 - <a href="2024/09.html#14">gardening era</a></li>
-    <li class="tech coding">01.sep.24 - <a href="2024/10.html#1">from brackets to VSC</a></li>
-    <li class="uni life">22.aug.24 - <a href="2024/08.html#22">storm update + compsci class</a></li>
-    <li class="life">13.aug.24 - <a href="2024/08.html#13">tropical storm</a></li>
-    <li class="life">31.jul.24 - <a href="2024/07.html#31">employment era</a></li>
-    <li class="life">15.jul.24 - <a href="2024/07.html#15">interview update</a></li>
-    <li class="coding life site">06.jul.24 - <a href="2024/07.html#6">journal v3 + interview</a></li>
-    <li class="life">25.jun.24 - <a href="2024/06.html#25">last day</a></li>
-    <li class="life">16.jun.24 - <a href="2024/06.html#16">guilt</a></li>
-    <li class="life">04.jun.24 - <a href="2024/06.html#4">visiting AZ + 3DS</a></li>
-    <li class="music tech">26.may.24 - <a href="2024/05.html#26">portable CS player</a></li>
-    <li class="uni life interest coding">20.may.24 - <a href="2024/05.html#20">free from uni</a></li>
-    <li class="gaming life uni">04.may.24 - <a href="2024/05.html#4">end of 1st uni semester</a></li>
-    <li class="tech">20.apr.24 - <a href="2024/04.html#20">my dilemma with neocities profile</a></li>
-    <li class="site">11.apr.24 - <a href="2024/04.html#11">site birth</a></li>
-    <li class="life">07.apr.24 - <a href="2024/04.html#7">gender</a></li>
-    <li class="site">25.mar.24 - <a href="2024/03.html#25">custom domain</a></li>
-    <li class="uni life">23.mar.24 - <a href="2024/03.html#23">warmth</a></li>
-    <li class="uni coding">07.mar.24 - <a href="2024/03.html#7">uni + JS learning</a></li>
-    <li class="uni">17.feb.24 - <a href="2024/02.html#17">busy...</a></li>
-    <li class="life">11.jan.24 - <a href="2024/01.html#11">grandma</a></li>
-    <li class="life">05.jan.24 - <a href="2024/01.html#5">back home</a></li>
-    <li class="life site">22.dec.23 - <a href="2023/12.html#22">visitor + site news + microblog</a></li>
-    <li class="uni">18.dec.23 - <a href="2023/12.html#18">uni admission accepted!</a></li>
-    <li class="life">08.dec.23 - <a href="2023/12.html#8">2nd anniversary</a></li>
-    <li class="coding">01.dec.23 - <a href="2023/12.html#1">learning about github</a></li>
-    <li class="life">27.nov.23 - <a href="2023/11.html#27">life update</a></li>
-    <li class="interests">13.nov.23 - <a href="2023/11.html#13">powy n meowy</a></li>
-    <li class="music">08.nov.23 - <a href="2023/11.html#8">ways of consuming music</a></li>
-    <li class="life">28.oct.23 - <a href="2023/10.html#28">five nights at frederick's</a></li>
-    <li class="reading life">22.oct.23 - <a href="2023/10.html#22">sick n reading</a></li>
-    <li class="site">21.oct.23 - <a href="2023/10.html#21">journal format</a></li>
-    <li class="interests life">11.oct.23 - <a href="2023/10.html#11">horror</a></li>
-    <li class="life">03.oct.24 - <a href="2023/10.html#3">interview</a></li>
-    <li class="life uni">01.oct.23 - <a href="2023/10.html#1">old friend + going back to uni? + OCTOBER!</a></li>
-    <li class="life">23.sep.23 - <a href="2023/09.html#23">mini update</a></li>
-    <li class="life">18.sep.23 - <a href="2023/09.html#18">happier lately + other bits</a></li>
-    <li class="tech gaming">14.sep.23 - <a href="2023/09.html#14">rest in peace, ps4</a></li>
-    <li class="life">03.sep.23 - <a href="2023/09.html#3">pretty nice</a></li>
-    <li class="life">02.sep.23 - <a href="2023/09.html#2">an unexpected journey while buying a new journal</a></li>
-    <li class="coding">29.aug.23 - <a href="2023/08.html#29">learning to code... again</a></li>
-    <li class="coding">25.aug.23 - <a href="2023/08.html#25">changes</a></li>
-    <li class="gaming tech">18.aug.23 - <a href="2023/08.html#18">7 year old ps4</a></li>
-    <li class="life">12.aug.23 - <a href="2023/08.html#12">IM FREE</a></li>
-    <li class="life">09.aug.23 - <a href="2023/08.html#9">covid update + overwhelmed</a></li>
-    <li class="life">06.aug.23 - <a href="2023/08.html#6">re: i hauve covid</a></li>
-    <li class="life">03.aug.23 - <a href="2023/08.html#3">i hauve covid</a></li>
-    <li class="life">29.jul.23 - <a href="2023/07.html#29">sick,,,</a></li>
-    <li class="life">27.jul.23 - <a href="2023/07.html#27">barbenheimer</a></li>
-    <li class="life">23.jul.23 - <a href="2023/07.html#23">art block?</a></li>
-    <li class="life">20.jul.23 - <a href="2023/07.html#20">collie puppies</a></li>
-    <li class="life cooking">17.jul.23 - <a href="2023/07.html#17">cooking</a></li>
-    <li class="life">08.jul.23 - <a href="2023/07.html#8">sunset</a></li>
-    <li><a href="2023/06.html">june 2023</a></li>
-    <li><a href="2023/05.html">may 2023</a></li>
-    <li><a href="2023/04.html">april 2023</a></li>
+    <h3>tags</h3>
+    <center> <button onclick="showLog('')">all</button>
+      <button onclick="showLog('life')">life</button>
+      <button onclick="showLog('interests')">interests</button>
+      <button onclick="showLog('pets')">pets</button>
+      <button onclick="showLog('uni')">uni</button>
+      <button onclick="showLog('tech')">tech</button>
+      <button onclick="showLog('coding')">coding</button>
+      <button onclick="showLog('site')">site</button>
+      <button onclick="showLog('music')">music</button>
+      <button onclick="showLog('gaming')">gaming</button>
+    </center>
+    <h3>logs</h3>
+    <ul>
+      <li class="gaming">18.jun.25 - <a href="2025/06.html#18">PS5 thoughts: 1 month in</a></li>
+      <li class="tech interests">01.jun.25 - <a href="2025/06.html#1">my beautiful madoka discs</a></li>
+      <li class="life uni">26.may.25 - <a href="2025/05.html#26">recap of uni semester + summer plans</a></li>
+      <li class="pets">20.apr.25 - <a href="2025/04.html#20">walking steve minecraft outside</a></li>
+      <li class="life coding">11.apr.25 - <a href="2025/04.html#11">this is like the equivalent of someone not talking for a week and then talking for 5 hours straight.</a></li>
+      <li class="music interests">08.mar.25 - <a href="2025/03.html#8">i need to let go of spotify</a></li>
+      <li class="uni">01.mar.25 - <a href="2025/03.html#1">a lot happening</a></li>
+      <li class="uni">23.jan.25 - <a href="2025/01.html#23">2nd year of uni</a></li>
+      <li class="life interests gaming">20.jan.25 - <a href="2025/01.html#20">winter break wrap-up</a></li>
+      <li class="life interests">01.jan.25 - <a href="2025/01.html#1">i am tired, but also a bit joyful</a></li>
+      <li class="uni">17.dec.24 - <a href="2024/12.html#17">1st year of uni done!</a></li>
+      <li class="pets">23.nov.24 - <a href="2024/11.html#23">my new furry friend: steve</a></li>
+      <li class="interests">31.oct.24 - <a href="2024/10.html#31">happy halloween</a></li>
+      <li class="interests">25.oct.24 - <a href="2024/10.html#25">look back</a></li>
+      <li class="life">27.sep.24 - <a href="2024/09.html#27">untitled post</a></li>
+      <li class="gardening">14.sep.24 - <a href="2024/09.html#14">gardening era</a></li>
+      <li class="tech coding">01.sep.24 - <a href="2024/10.html#1">from brackets to VSC</a></li>
+      <li class="uni life">22.aug.24 - <a href="2024/08.html#22">storm update + compsci class</a></li>
+      <li class="life">13.aug.24 - <a href="2024/08.html#13">tropical storm</a></li>
+      <li class="life">31.jul.24 - <a href="2024/07.html#31">employment era</a></li>
+      <li class="life">15.jul.24 - <a href="2024/07.html#15">interview update</a></li>
+      <li class="coding life site">06.jul.24 - <a href="2024/07.html#6">journal v3 + interview</a></li>
+      <li class="life">25.jun.24 - <a href="2024/06.html#25">last day</a></li>
+      <li class="life">16.jun.24 - <a href="2024/06.html#16">guilt</a></li>
+      <li class="life">04.jun.24 - <a href="2024/06.html#4">visiting AZ + 3DS</a></li>
+      <li class="music tech">26.may.24 - <a href="2024/05.html#26">portable CD player</a></li>
+      <li class="uni life interest coding">20.may.24 - <a href="2024/05.html#20">free from uni</a></li>
+      <li class="gaming life uni">04.may.24 - <a href="2024/05.html#4">end of 1st uni semester</a></li>
+      <li class="tech">20.apr.24 - <a href="2024/04.html#20">my dilemma with neocities profile</a></li>
+      <li class="site">11.apr.24 - <a href="2024/04.html#11">site birth</a></li>
+      <li class="life">07.apr.24 - <a href="2024/04.html#7">gender</a></li>
+      <li class="site">25.mar.24 - <a href="2024/03.html#25">custom domain</a></li>
+      <li class="uni life">23.mar.24 - <a href="2024/03.html#23">warmth</a></li>
+      <li class="uni coding">07.mar.24 - <a href="2024/03.html#7">uni + JS learning</a></li>
+      <li class="uni">17.feb.24 - <a href="2024/02.html#17">busy...</a></li>
+      <li class="life">11.jan.24 - <a href="2024/01.html#11">grandma</a></li>
+      <li class="life">05.jan.24 - <a href="2024/01.html#5">back home</a></li>
+      <li class="life site">22.dec.23 - <a href="2023/12.html#22">visitor + site news + microblog</a></li>
+      <li class="uni">18.dec.23 - <a href="2023/12.html#18">uni admission accepted!</a></li>
+      <li class="life">08.dec.23 - <a href="2023/12.html#8">2nd anniversary</a></li>
+      <li class="coding">01.dec.23 - <a href="2023/12.html#1">learning about github</a></li>
+      <li class="life">27.nov.23 - <a href="2023/11.html#27">life update</a></li>
+      <li class="interests">13.nov.23 - <a href="2023/11.html#13">powy n meowy</a></li>
+      <li class="music">08.nov.23 - <a href="2023/11.html#8">ways of consuming music</a></li>
+      <li class="life">28.oct.23 - <a href="2023/10.html#28">five nights at frederick's</a></li>
+      <li class="reading life">22.oct.23 - <a href="2023/10.html#22">sick n reading</a></li>
+      <li class="site">21.oct.23 - <a href="2023/10.html#21">journal format</a></li>
+      <li class="interests life">11.oct.23 - <a href="2023/10.html#11">horror</a></li>
+      <li class="life">03.oct.24 - <a href="2023/10.html#3">interview</a></li>
+      <li class="life uni">01.oct.23 - <a href="2023/10.html#1">old friend + going back to uni? + OCTOBER!</a></li>
+      <li class="life">23.sep.23 - <a href="2023/09.html#23">mini update</a></li>
+      <li class="life">18.sep.23 - <a href="2023/09.html#18">happier lately + other bits</a></li>
+      <li class="tech gaming">14.sep.23 - <a href="2023/09.html#14">rest in peace, ps4</a></li>
+      <li class="life">03.sep.23 - <a href="2023/09.html#3">pretty nice</a></li>
+      <li class="life">02.sep.23 - <a href="2023/09.html#2">an unexpected journey while buying a new journal</a></li>
+      <li class="coding">29.aug.23 - <a href="2023/08.html#29">learning to code... again</a></li>
+      <li class="coding">25.aug.23 - <a href="2023/08.html#25">changes</a></li>
+      <li class="gaming tech">18.aug.23 - <a href="2023/08.html#18">7 year old ps4</a></li>
+      <li class="life">12.aug.23 - <a href="2023/08.html#12">IM FREE</a></li>
+      <li class="life">09.aug.23 - <a href="2023/08.html#9">covid update + overwhelmed</a></li>
+      <li class="life">06.aug.23 - <a href="2023/08.html#6">re: i hauve covid</a></li>
+      <li class="life">03.aug.23 - <a href="2023/08.html#3">i hauve covid</a></li>
+      <li class="life">29.jul.23 - <a href="2023/07.html#29">sick,,,</a></li>
+      <li class="life">27.jul.23 - <a href="2023/07.html#27">barbenheimer</a></li>
+      <li class="life">23.jul.23 - <a href="2023/07.html#23">art block?</a></li>
+      <li class="life">20.jul.23 - <a href="2023/07.html#20">collie puppies</a></li>
+      <li class="life cooking">17.jul.23 - <a href="2023/07.html#17">cooking</a></li>
+      <li class="life">08.jul.23 - <a href="2023/07.html#8">sunset</a></li>
+      <!-- pick em apart!!! -->
+      <li><a href="2023/06.html">june 2023</a></li>
+      <li><a href="2023/05.html">may 2023</a></li>
+      <li><a href="2023/04.html">april 2023</a></li>
+    </ul>
 
 
   </main>
