--- a/doqmeat/collection/index.html
+++ b/doqmeat/collection/index.html
@@ -34,6 +34,7 @@ https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
 				<li><a href="plushies/index.html">plushies</a></li>
 				<li><a href="/music/cds/index.html">CDs</a></li>
 				<li><a href="stickers/index.html">stickers</a></li>
+				<li>blu-rays</li>
 				<li>picrews</li>
 			</ul>
 			<!-- 		container end div -->
