--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -67,6 +67,7 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
+      <p><b>22.jun.25</b> - added <i>11100011</i> to <a href="cds/index.html">cd collection</a></p>
       <p><b>29.may.25</b> - added <i>PMMM: rebellion</i> to <a href="cds/index.html">cd collection</a></p>
       <p><b>23.may.25</b> - new featured and album once again!</p>
       <p><b>28.feb.25</b> - new featured song &amp; album :-)</p>
