--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -14,10 +14,6 @@ finished on 02.mar.25 -->
 	<link rel="icon" type="image/x-icon" href="/!g/pix/dumy.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="!f/v5/body.css?0613" rel="stylesheet" type="text/css" media="all">
-	<!-- 4 the vocaloid webring -->
-	<link rel="stylesheet" href="https://electric-tenshi.nekoweb.org/vocaring/vocaring.css">
-	<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-variables.js"></script>
-	<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-widget.js"></script>
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -167,7 +163,10 @@ finished on 02.mar.25 -->
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
 					<!-- vocaloid webring -->
-					<div id="vocaring"></div>
+					<div id="vocaring" class="medium" style="margin-bottom:10px"></div>
+					<link rel="stylesheet" href="https://electric-tenshi.nekoweb.org/vocaring/vocaring.css">
+					<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-variables.js"></script>
+					<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-widget.js"></script>
 
 					<!-- music ring -->
 					<div style="margin:auto;">
