--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -52,11 +52,14 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>22.jun.25 - 3am</b> haven't been to work for the past week cus i'm with a cold but my god have i gotten a throwback to my unemployment days <img src="/!g/pix/emote1laugh.gif"> been spending most of my days with steve watching <a title="letterboxd profile" href="https://letterboxd.com/doqmeat/" target="_blank" class="outlink">movies</a>, playing either <a title="bloodborne log" href="../vgs/games/bloodborne/index.html">bloodborne</a> or <i>overwatch 2</i>, and going through a <a href="https://javascript.info" target="_blank" class="outlink">javascript online tutorial</a> <small>while having sooo many throwbacks to my <i>intro to programming</i> uni class with C++</small>. i miss having a lot of free time but also... i am okay with how things currently are :3 it's just a bit hard to find that balance of responsibilities and having fun.</p>
+				</article>
+				<article>
 					<p><b>17.jun.25 - 10pm</b> it is truly my biggest wish to leave somewhere where there aren't constant power outages. my dream. picture this: you have a fever and suddenly the power goes out. almost killed myself.</p>
 				</article>
 				<article>
 					<p><b>03.jun.25 - 3am</b> celebrated my b-day a little bit yesterday. i organized a hangout with my online friends and we got to play some marvel rivals together. it was my first time playing and as a overwatch player i find it VERY fast paced to my liking.</p>
-					<p>got some b-day gift from my lovely girlfriend. one of them was a melody themed wooden flower pot that you had to put together like a lego and the other gift was from a mystery box of bread animals :3 <button onclick="showPic('!g/250603-flower.png','wooden melody flower decoration','i had a lot of fun building it, its so cute!!')">flower.png</button> <button onclick="showPic('!g/250603-elephant.png','elephant bread','look at this little guy')">elephant.png</button></p>
+					<p>got some b-day gift from my lovely girlfriend. one of them was a melody themed wooden flower pot that you had to put together like a lego and the other gift was from a mystery box of bread animals :3 <button onclick=" showPic('!g/250603-flower.png','wooden melody flower decoration','i had a lot of fun building it, its so cute!!')">flower.png</button> <button onclick="showPic('!g/250603-elephant.png','elephant bread','look at this little guy')">elephant.png</button></p>
 					<p>and then later around the day i went for a walk. haven't walked in a bit. i eventually started thinking about that siinamota lyric from <a title="youtube video" href="https://www.youtube.com/watch?v=7sKs7INaEoA" target="_blank" class="outlink">strobe light</a> that goes <i>i'm looking for meaning in life... i walk because i was born</i> and i started tearing up. yeah i really do think life is beautiful.</p>
 				</article>
 				<article>
