added an online counter + cleaning css file

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -133,14 +133,18 @@ finished on 02.mar.25 -->
 			<section id="notepad">
 				<section id="stats" class="notepad-boxes">
 					<h3>stats</h3>
-					<a href="//clap.fc2.com/post/doqmeat/?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&title=doqmeat%27s+site" target="_blank" title="enjoy my site? give it a clap!"><img src="//clap.fc2.com/images/button/orange/doqmeat?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&amp;lang=en" alt="Web Clap by FC2" style="border: none; border-radius: 10px"></a>
+					<p>enjoy my site? give it a clap!</p>
+					<a href="//clap.fc2.com/post/doqmeat/?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&title=doqmeat%27s+site" target="_blank"><img src="//clap.fc2.com/images/button/orange/doqmeat?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&amp;lang=en" alt="Web Clap by FC2" style="border: none; border-radius: 10px"></a>
 
-					<br>
-					you are visitor number...
+
+					<p>currently online...</p>
+					<script language="javascript" type="text/javascript" src="//counter1.fc2.com/views.php?id=39059397&main=1"></script><noscript><img src="//counter1.fc2.com/counter_now.php?id=39059397&main=1" /></noscript>
+
+
+					<p>you are visitor number...</p>
 					<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=39059397&main=1"></script>
 					<noscript><img src="//counter1.fc2.com/counter_img.php?id=39059397&main=1"></noscript>
 
-					<br>
 
 					<a href="https://info.flagcounter.com/924j"><img src="https://s11.flagcounter.com/count/924j/bg_FFFFFF/txt_000000/border_CCCCCC/columns_3/maxflags_15/viewers_3/labels_0/pageviews_0/flags_0/percent_0/" width="90%" alt="Flag Counter" border="0"></a>
 				</section>
@@ -158,7 +162,7 @@ finished on 02.mar.25 -->
 					<p><span class="title">watching: </span> jojo's bizarre adventure</p>
 					<p><span class="title">reading: </span> <a href="https://javascript.info/" target="_blank" class="outlink">the modern javascript tutorial</a></p>
 					<p><span class="title">working on: </span> <a href="https://roadmap.sh/frontend?s=67a96538f86334348220c214" target="_blank" class="outlink">frontend roadmap</a>, having a fun summer break!</p>
-					<p class="date">last updated: 18.jun.25</p>
+					<p class="date">last updated: 22.jun.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
