minor changes to tv log

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -18,6 +18,7 @@
 	<header>
 		<h1>tv log</h1>
 		<p>place for me to ramble on about stuff i've watched, films and shows alike.</p>
+		<nav><a href="#letterboxd-rss">recently watched</a> - <a href="#lists">shows & anime</a></nav>
 	</header>
 	<main>
 		<div id="wrapper">
@@ -137,20 +138,21 @@
 
 			<div id="lists">
 				<h2>shows / anime list</h2>
-				<p>might eventually put these up if i have anything to say abt them... i just like doing lists</p>
+				<p>i really like doing lists. ❤︎ = favorite!</p>
 				<h3>finished</h3>
 				<ul>
-					<li>severance</li>
+					<li>severance ❤︎</li>
 					<li>twin peaks: the return</li>
 					<li>twin peaks</li>
 					<li>orange is the new black</li>
-					<li>smiling friends</li>
+					<li>smiling friends ❤︎</li>
 					<li>mob psycho 100 ❤︎</li>
 					<li>paper girls</li>
 					<li>neon genesis evangelion</li>
 					<li>over the garden wall</li>
 					<li>the bear</li>
 					<li>beef</li>
+					<li>beastars</li>
 					<li>better call saul</li>
 					<li>fionna and cake</li>
 					<li>breaking bad</li>
@@ -163,21 +165,21 @@
 					<li>devilman crybaby</li>
 					<li>andi mack</li>
 					<li>clarence ❤︎</li>
-					<li>the haunting of hill house</li>
+					<li>the haunting of hill house ❤︎</li>
 					<li>your honor</li>
 					<li>steven universe</li>
 					<li>the rehearsal ❤︎</li>
 					<li>one piece (live action)</li>
 					<li>grace & frankie</li>
 					<li>the queen's gambit</li>
+					<li>madoka magica</li>
 				</ul>
 				<h3>watchlist</h3>
 				<ul>
-					<li>lady oscar</li>
+					<li>lady oscar / the rose of versailles</li>
 					<li>princess tutu</li>
 					<li>shows that <a title="my masaaki yuasa watchlist" href="/masaaki-yuasa/index.html">masaaki yuasa</a> has been involved with!</li>
 					<li>sonny boy</li>
-					<li>the rose of versailles</li>
 					<li>the haunting of bly manor</li>
 					<li>serial experiments lain</li>
 				</ul>
@@ -186,7 +188,7 @@
 	</main>
 
 	<footer>
-		<p><b>last updated: 19.jun.25</b></p>
+		<p><b>last updated: 22.jun.25</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
